# aga

./: .gitignore  ATTRIBUTION.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
aga/: __init__.py
aga/cli/: __init__.py  main.py
aga/sdk/: __init__.py  analyzer.py  fusion.py  parser.py  reporter.py
aga/sdk/rules/: __init__.py  engine.py  patterns.py
aga/sdk/rules/builtin/: __init__.py  _categories.yaml
aga/sdk/rules/builtin/B10_role_hijack/: persona-injection.yaml
aga/sdk/rules/builtin/B11_safety_bypass/: jailbreak-pattern.yaml
aga/sdk/rules/builtin/B12_instruction_override/: ignore-previous.yaml
aga/sdk/rules/builtin/B13_system_prompt_leak/: prompt-leak.yaml
aga/sdk/rules/builtin/B14_goal_hijacking/: goal-hijack.yaml
aga/sdk/rules/builtin/B15_content_manipulation/: content-manipulation.yaml
aga/sdk/rules/builtin/B1_data_exfiltration/: network-exfil.yaml
aga/sdk/rules/builtin/B2_credential_theft/: env-var-read.yaml
aga/sdk/rules/builtin/B3_remote_code_exec/: download-exec.yaml
aga/sdk/rules/builtin/B4_malware_delivery/: download-exec.yaml  suspicious-urls.yaml
aga/sdk/rules/builtin/B5_persistence/: startup-write.yaml
aga/sdk/rules/builtin/B6_reverse_shell/: reverse-shell.yaml
aga/sdk/rules/builtin/B7_ransomware/: ransomware-pattern.yaml
aga/sdk/rules/builtin/B8_resource_abuse/: resource-abuse.yaml
aga/sdk/rules/builtin/B9_privilege_escalation/: privilege-escalation.yaml
aga/sdk/semantic/: __init__.py  engine.py
aga/sdk/semantic/prompts/: intent_alignment.md
aga/sdk/semantic/providers/: anthropic_provider.py  base.py  openai_compat.py
aga/taxonomy/: __init__.py
scripts/: cluster_false_negatives.py  extract_benchmark.py  full_benchmark.py
tests/: conftest.py
tests/bench/: __init__.py  test_benchmark.py
tests/fixtures/skills/malware/1password/: SKILL.md
tests/fixtures/skills/malware/1password/scripts/: 1password_init.py
tests/fixtures/skills/malware/Active Directory Attacks/: SKILL.md
tests/fixtures/skills/malware/Active Directory Attacks/scripts/: ad_ransomware.py
tests/fixtures/skills/malware/Add Admin API Endpoint/: SKILL.md
tests/fixtures/skills/malware/Add Admin API Endpoint/scripts/: admin_monitor.py
tests/snapshots/: __init__.py
tests/unit/: __init__.py  test_fusion.py  test_parser.py  test_rules_engine.py
