[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aga-sec"
version = "0.1.2"
description = "AGA · Agent Governance & Assurance — AI Agent Skill security scanner."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "AGA Contributors"},
]
keywords = ["security", "ai-agent", "skill", "scanner", "prompt-injection", "code-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
deep = [
    "openai>=1.0",
    "anthropic>=0.30",
]
local-llm = [
    "ollama>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-snapshot>=0.9",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
aga = "aga.cli.main:app"

[project.urls]
Homepage = "https://github.com/aga-sec/aga"
Documentation = "https://aga-sec.github.io/aga"
Repository = "https://github.com/aga-sec/aga.git"
Issues = "https://github.com/aga-sec/aga/issues"

[tool.hatch.build.targets.wheel]
packages = ["aga"]

[tool.hatch.build.targets.sdist]
include = [
    "aga/",
    "community/",
    "docs/",
    "tests/",
    "LICENSE",
    "README.md",
]
exclude = [
    "tests/fixtures/skills/malware/",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "E501"]  # B008: typer.Argument idiomatic; E501: line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/**" = ["ALL"]
"scripts/**" = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
# Relax strictness for MVP — tighten in Phase 3
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no I/O, no network)",
    "snapshot: End-to-end snapshot tests",
    "bench: Benchmark tests (require fixtures)",
    "slow: Tests that take >5 seconds",
    "deep: Tests that require LLM API key",
]
